custom version of pybullet deep mimic

--- a/data/Behavioral_Cloning.ipynb
+++ b/data/Behavioral_Cloning.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 2,
       "id": "b09a0b12",
       "metadata": {
         "id": "b09a0b12"
@@ -11,10 +11,10 @@
         {
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7dc032291ab0>"
+              "<torch._C.Generator at 0x75e948296710>"
             ]
           },
-          "execution_count": 118,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
