nn output conversion into actions

--- a/data/Behavioral_Cloning.ipynb
+++ b/data/Behavioral_Cloning.ipynb
@@ -2,19 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "id": "b09a0b12",
       "metadata": {
         "id": "b09a0b12"
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/leeoos/miniconda3/envs/hum_rl/lib/python3.7/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x78387b67b710>"
+              "<torch._C.Generator at 0x7f4bb18b9730>"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -38,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "ce03945f",
       "metadata": {
         "id": "ce03945f"
@@ -75,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "11af5407",
       "metadata": {
         "colab": {
@@ -161,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "4c7a5b24",
       "metadata": {
         "colab": {
@@ -709,6 +717,43 @@
         "    if exists(dest+name.lower()+'.pt'):\n",
         "        remove(dest+name.lower()+'.pt')\n",
         "torch.save(student.policy.state_dict(), dest+name.lower()+'.pt')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "policy net:  Sequential(\n",
+            "  (0): Linear(in_features=196, out_features=16, bias=True)\n",
+            "  (1): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  (2): ReLU()\n",
+            "  (3): Linear(in_features=16, out_features=36, bias=True)\n",
+            ")\n",
+            "torch.Size([1, 196])\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "(36,)"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "student = StudentAgent(train_loader, test_loader, learning_rate=1e-3, threshold=1e-3)\n",
+        "obs = train_loader.dataset.__getitem__(0)[0].float().unsqueeze(0)\n",
+        "print(obs.shape)\n",
+        "student.policy.eval()  # Set the model to evaluation mode\n",
+        "student.policy(obs).squeeze().detach().numpy().shape"
       ]
     }
   ],
