changed  bc agent struture

--- a/Behavioral_Cloning.ipynb
+++ b/Behavioral_Cloning.ipynb
@@ -41,6 +41,8 @@
         "import math\n",
         "torch.manual_seed(42)\n",
         "\n",
+        "\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "# from sklearn import preprocessing"
       ]
     },
@@ -169,6 +171,198 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "94873ce1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Policy agent\n",
+        "\n",
+        "class BCAgent(nn.Module):\n",
+        "\n",
+        "  def __init__(self, obs_space, action_space) -> None:\n",
+        "    self.name = 'Behavioral-Cloning-Agent'\n",
+        "\n",
+        "    self.n_inputs = obs_space\n",
+        "    self.n_outputs = action_space\n",
+        "\n",
+        "    # Policy Network\n",
+        "    self.fc1 = nn.Linear(self.n_inputs)\n",
+        "    self.bn1 = nn.BatchNorm1d(16)\n",
+        "    self.relu = nn.ReLU()\n",
+        "    self.fc2 = nn.Linear(16, self.n_outputs)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    out = self.fc1(x)\n",
+        "    out = self.bn1(out)\n",
+        "    out = self.relu(out)\n",
+        "    out = self.fc2(out)\n",
+        "    return out\n",
+        "  \n",
+        "  def load_parameters(self, dir): \n",
+        "    if exists(dir+self.name.lower()+'.pt'):\n",
+        "        print(\"Loading model \"+self.name+\" state parameters\")\n",
+        "        self.load_state_dict(torch.load(dir+self.name.lower()+'.pt', map_location=self.device))\n",
+        "        return self\n",
+        "    else:\n",
+        "        print(\"Error no model \"+self.name.lower()+\" found!\")\n",
+        "        exit(1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "09e78876",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Train functions\n",
+        "\n",
+        "def train(\n",
+        "        policy,\n",
+        "        train_epochs,\n",
+        "        eval_epochs,\n",
+        "        train_loader, \n",
+        "        test_loader,\n",
+        "        optimizer,\n",
+        "        loss_criterion\n",
+        "    ):\n",
+        "\n",
+        "    policy.train()\n",
+        "    policy.to(device)\n",
+        "    \n",
+        "    loss = 0\n",
+        "    epoch_loss = 0\n",
+        "    unused_val = 0\n",
+        "\n",
+        "    for epoch in range(train_epochs):\n",
+        "        for batch_idx, (data, target) in enumerate(train_loader):\n",
+        "\n",
+        "            obs, expert_action = data.to(device), target.to(device)\n",
+        "            obs = obs.float()\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "\n",
+        "            student_action = policy(obs)\n",
+        "            expert_action = expert_action.float()\n",
+        "\n",
+        "            loss = loss_criterion(student_action, expert_action)\n",
+        "            # loss.register_hook(lambda grad: print(grad))\n",
+        "            loss.backward()\n",
+        "            # print(\"Loss: {}\".format(loss.item()))\n",
+        "            \n",
+        "            \n",
+        "            if not loss.item() == torch.inf: \n",
+        "                epoch_loss += loss.item()\n",
+        "                optimizer.step()\n",
+        "\n",
+        "            else:\n",
+        "                unused_val += 1\n",
+        "                # print(\"### BATCH {} ###\".format(batch_idx))\n",
+        "                # print(f'obs -> {obs}')\n",
+        "                print(\"\\n______________________________________________________________________________\")\n",
+        "                print(f'expert_action -> {expert_action}')\n",
+        "                print(\"\\n______________________________________________________________________________\")\n",
+        "                print(f'student_action -> {student_action}')\n",
+        "                print(\"\\n______________________________________________________________________________\")\n",
+        "                return expert_action,student_action\n",
+        "\n",
+        "            res = print_gradients()\n",
+        "            \n",
+        "            # print(\"###############################################################################\\n\")\n",
+        "\n",
+        "            if torch.isnan(student_action).any(): \n",
+        "                print('e successo')\n",
+        "                break\n",
+        "            if res == 1: \n",
+        "                print(\"\\n______________________________________________________________________________\")\n",
+        "                print(student_action.shape)\n",
+        "                for i, ea in enumerate(expert_action):\n",
+        "                    if not np.isfinite(ea).all():\n",
+        "                        print(i+64)\n",
+        "                        print(f'expert_action -> {ea}')\n",
+        "\n",
+        "                print(\"\\n______________________________________________________________________________\")\n",
+        "                print(f'Max expert_action -> {expert_action.max()}')\n",
+        "                print(f'Min expert_action -> {expert_action.min()}')\n",
+        "                print(f'Max student_action -> {student_action.max()}')\n",
+        "                print(f'Min student_action -> {student_action.min()}')\n",
+        "                break\n",
+        "            \n",
+        "            # print(\"Student actions: {}\".format(student_action.shape))\n",
+        "            # print(\"Expert actions: {}\".format(expert_action.shape))\n",
+        "        \n",
+        "        \n",
+        "        # compute accuracy\n",
+        "        print(\"Epoch {}\".format(epoch))\n",
+        "        print(\"Train Loss: {}\".format(epoch_loss/(batch_idx+1)))\n",
+        "        validation(test_loader, num_epochs=eval_epochs)\n",
+        "        print(\"Unused Loss: {}\".format(unused_val))\n",
+        "        epoch_loss = 0\n",
+        "        unused_val = 0\n",
+        "        print(\"###############################################################################\\n\")\n",
+        "\n",
+        "\n",
+        "def validation(self, loader, num_epochs):\n",
+        "    self.policy.eval()\n",
+        "    epoch_loss = 0\n",
+        "    for epoch in range(num_epochs):\n",
+        "        for batch_idx, (data, target) in enumerate(loader):\n",
+        "            obs, expert_action = data.to(device), target.to(device)\n",
+        "            obs = obs.float()\n",
+        "            student_action = self.policy(obs)\n",
+        "            loss = self.loss_criterion(student_action, expert_action)\n",
+        "            epoch_loss += loss.item()\n",
+        "\n",
+        "    print(\"Validation Loss: {}\".format(epoch_loss/(batch_idx+1)))\n",
+        "\n",
+        "def print_gradients(self):\n",
+        "    for name, param in self.policy.named_parameters():\n",
+        "        if param.requires_grad:\n",
+        "            if torch.isnan(param.grad).any(): \n",
+        "                return 1#break\n",
+        "            # print(f\"Gradient of {name}: {param.grad}\")\n",
+        "    return 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1d8a59c8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Train module\n",
+        "\n",
+        "policy = BCAgent()\n",
+        "loss_criterion = nn.MSELoss()\n",
+        "optimizer =  optim.Adam(policy.parameters(), lr=1e-2)\n",
+        "eval_epochs = 5\n",
+        "\n",
+        "train(policy, \n",
+        "      train_epochs=100, \n",
+        "      eval_epochs=5, \n",
+        "      train_loader=train_loader, \n",
+        "      test_loader=test_loader,\n",
+        "      optimizer=optimizer,\n",
+        "      loss_criterion=loss_criterion\n",
+        "    )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "82745485",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# save trained model\n",
+        "\n",
+        "torch.save(policy.state_dict, './checkpoints/'+policy.name.lower()+'.pt')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 5,
       "id": "4c7a5b24",
       "metadata": {
@@ -191,13 +385,6 @@
       "source": [
         "###### Define student agent\n",
         "\n",
-        "no_cuda = False\n",
-        "torch_available = torch.cuda.is_available()\n",
-        "print(torch_available)\n",
-        "use_cuda = not no_cuda and torch.cuda.is_available()\n",
-        "print('use_cuda: ', use_cuda)\n",
-        "\n",
-        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
         "\n",
         "class StudentAgent:\n",
         "    def __init__(self, train_loader, test_loader, learning_rate, threshold):\n",
