change to policy

--- a/Behavioral_Cloning.ipynb
+++ b/Behavioral_Cloning.ipynb
@@ -10,7 +10,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 10,
       "id": "b09a0b12",
       "metadata": {
         "id": "b09a0b12"
@@ -20,8 +20,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "device: cpu\n",
-            "root: /home/leeoos/Projects/master/airo-rl/acrobatic-agents\n"
+            "device: cuda\n",
+            "root: /home/bitfra/Desktop/Francesco/rl_project/acrobatic-agents\n"
           ]
         }
       ],
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "id": "ce03945f",
       "metadata": {
         "id": "ce03945f"
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "id": "11af5407",
       "metadata": {
         "colab": {
@@ -122,7 +122,13 @@
           "output_type": "stream",
           "text": [
             "Expert actions len: 8000\n",
-            "Expert observations len: 8000\n",
+            "Expert observations len: 8000\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Discarded data\n",
             "Discarded form np: 0\n",
             "Discarded form torch: 0\n",
@@ -202,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 29,
       "id": "94873ce1",
       "metadata": {},
       "outputs": [],
@@ -233,14 +239,16 @@
         "    out = self.fc2(out)\n",
         "    return out\n",
         "  \n",
-        "  def load_parameters(self, dir): \n",
-        "    if exists(dir+self.name.lower()+'.pt'):\n",
+        "  def load_parameters(self, src):\n",
+        "    # if exists(dir+self.name.lower()+'.pt'): \n",
+        "    if exists(src):\n",
         "        print(\"Loading model \"+self.name+\" state parameters\")\n",
-        "        self.load_state_dict(torch.load(dir+self.name.lower()+'.pt', map_location=self.device))\n",
+        "        print(\"From :{}\".format(src))\n",
+        "        self.load_state_dict(torch.load(src, map_location=self.device))\n",
         "        return self\n",
         "    else:\n",
         "        print(\"Error no model \"+self.name.lower()+\" found!\")\n",
-        "        exit(1)"
+        "        exit(1)\n"
       ]
     },
     {
@@ -253,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 30,
       "id": "09e78876",
       "metadata": {},
       "outputs": [],
@@ -381,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 31,
       "id": "1d8a59c8",
       "metadata": {},
       "outputs": [
@@ -389,7 +397,24 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [04:47<00:00, 14.37s/it, train_loss=0.0035, validation=0.0186] \n"
+            "100%|██████████| 20/20 [00:51<00:00,  2.58s/it, train=0.0051, validation=0.0233] "
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Train Loss: 0.005100689987884834\n",
+            "Validation Loss: 0.02331682918826118\n",
+            "###############################################################################\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
           ]
         }
       ],
@@ -430,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 32,
       "id": "82745485",
       "metadata": {},
       "outputs": [],
@@ -450,6 +475,166 @@
         "torch.save(policy.state_dict(), dest+save_name)\n",
         "\n",
         "#qui finisce "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "id": "846969ee",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "cuda\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(policy.device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "id": "a1c18b04",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n",
+            "real action: tensor([-0.7530,  0.0591, -0.0638,  0.4054, -0.3077,  0.2075,  0.0923,  0.5357,\n",
+            "         1.3419, -0.3775,  0.1903,  0.6258, -2.6502, -0.4104, -0.0113, -0.1208,\n",
+            "         0.0889,  0.8460, -0.2452, -0.2553,  0.0944,  0.7016,  1.6317,  0.2099,\n",
+            "         0.1358,  0.3904, -3.0713,  0.0482, -0.1579,  0.0431,  0.6645,  0.1123,\n",
+            "         0.3630, -0.0584,  0.1462,  1.2696])\n",
+            "our action: [-0.8012406   0.01511532 -0.06590917  0.4175666  -0.404617    0.12988374\n",
+            "  0.14380978  0.6097778   1.4650706  -0.28878763  0.09746633  0.7388556\n",
+            " -2.5089467   0.0462615  -0.03079884 -0.05245304  0.11216401  0.9946123\n",
+            " -0.27467892 -0.1417765   0.07271394  1.1426791   1.8268727   0.22042671\n",
+            "  0.13792142  0.39444414 -3.1216648   0.18165705 -0.09220846  0.12880783\n",
+            "  0.6495096   0.31455183  0.3389184   0.01886572  0.26982486  1.3636444 ]\n",
+            "real action: tensor([-0.5518, -0.1281, -0.0151,  0.7152,  0.4129,  0.5563, -0.0333,  0.6753,\n",
+            "         3.3432, -0.0096, -0.1531,  0.9758, -0.8951, -0.7328,  0.0218, -0.1166,\n",
+            "         0.4203,  0.6698, -0.2066,  0.3735,  0.0949, -0.0157,  2.9594, -0.0197,\n",
+            "         0.0788,  0.7244, -1.0186, -0.9158, -0.0498,  0.3980,  0.4729,  1.1842,\n",
+            "         0.3053, -0.5423,  0.3217,  1.2972])\n",
+            "our action: [-0.46545017 -0.20624973  0.09028172  0.7267989  -0.04258039  0.47310257\n",
+            " -0.02184722  0.78104186  4.1597652  -0.10249523 -0.01449404  1.1780627\n",
+            " -1.1572791  -0.6478562   0.138743   -0.15491973  0.4035002   1.3326379\n",
+            " -0.26166058  0.16055301 -0.0162935   0.36239743  4.233769   -0.10182183\n",
+            "  0.08997241  0.9318676  -1.5012034  -0.45128134 -0.09634738  0.35878038\n",
+            "  0.44357365  1.8993415   0.30981854 -0.44518557  0.21892485  0.7903768 ]\n",
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n",
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n",
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n",
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n",
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n",
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n",
+            "real action: tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+            "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+            "our action: [-0.00348195  0.00419287 -0.00257483  0.00043887  0.00120174 -0.00855614\n",
+            "  0.00243651 -0.00230825  0.00232608  0.00091796 -0.00292316  0.00018568\n",
+            "  0.00852696  0.0067345   0.00056387 -0.00586368  0.00131345  0.00893152\n",
+            "  0.00015079  0.00402855 -0.00314843 -0.00057269 -0.00933423  0.00017852\n",
+            "  0.00105132 -0.00175206 -0.01157005 -0.00417152  0.0014846   0.00283458\n",
+            "  0.0029884  -0.00030958  0.00520914  0.00751644  0.00582008 -0.00287467]\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(100,110):\n",
+        "  obs, action  = train_loader.dataset.__getitem__(i)\n",
+        "\n",
+        "  print(f'real action: {action}')\n",
+        "\n",
+        "  obs = obs.float().unsqueeze(0).to(device)\n",
+        "\n",
+        "  our_action = policy(obs).squeeze().detach().cpu().numpy()\n",
+        "\n",
+        "  print(f'our action: {our_action}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5cc5191c",
+      "metadata": {},
+      "source": [
+        "# Loading "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "id": "57b3ac73",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading model Behavioral-Cloning-Agent state parameters\n",
+            "From :/home/bitfra/Desktop/Francesco/rl_project/acrobatic-agents/checkpoints/behavioral-cloning-agent.pt\n",
+            "/home/bitfra/Desktop/Francesco/rl_project/acrobatic-agents/checkpoints/behavioral-cloning-agent.pt\n"
+          ]
+        }
+      ],
+      "source": [
+        "src = root_dir+'/checkpoints/'+policy.name.lower()+'.pt'\n",
+        "policy.load_parameters(src)\n",
+        "print(root_dir+'/checkpoints/'+policy.name.lower()+'.pt')"
       ]
     }
   ],
