--- a/training/Trainer..ipynb
+++ b/training/Trainer..ipynb
@@ -10,7 +10,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "b09a0b12",
       "metadata": {
         "id": "b09a0b12"
@@ -43,6 +43,8 @@
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
         "from torch.optim import lr_scheduler\n",
+        "from torch.utils.data.dataset import Dataset, random_split\n",
+        "\n",
         "torch.manual_seed(42)\n",
         "\n",
         "# set up train device\n",
@@ -63,6 +65,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 12,
+      "id": "0558881a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Import data and build dataloader\n",
+        "dataset_len = 4000\n",
+        "expert_observations = np.load(root_dir+'/data/expert-observations-'+str(dataset_len)+'.npy', allow_pickle=True)\n",
+        "expert_actions = np.load(root_dir+'/data/expert-actions-'+str(dataset_len)+'.npy', allow_pickle=True)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "a0fbfbb2",
       "metadata": {},
@@ -80,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "id": "ce03945f",
       "metadata": {
         "id": "ce03945f"
@@ -88,7 +103,6 @@
       "outputs": [],
       "source": [
         "# Dataset class\n",
-        "from torch.utils.data.dataset import Dataset, random_split\n",
         "\n",
         "class ExpertDataSet(Dataset):\n",
         "\n",
@@ -122,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "id": "11af5407",
       "metadata": {
         "colab": {
@@ -136,22 +150,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Expert actions len: 6000\n",
-            "Expert observations len: 6000\n",
+            "Expert actions len: 4000\n",
+            "Expert observations len: 4000\n",
             "Discarded data:\n",
-            "Discarded form np: 0\n",
-            "Discarded form torch: 0\n",
+            "Discarded form np: 1876\n",
+            "Discarded form torch: 1876\n",
             "Statistics: \n",
-            "Observations min: -46.60166549682617\n",
-            "Observations max: 66.23272705078125\n"
+            "Observations min: -32.20038604736328\n",
+            "Observations max: 35.84436798095703\n"
           ]
         }
       ],
       "source": [
-        "# Import data and build dataloader\n",
-        "\n",
-        "expert_observations = np.load(root_dir+'/data/expert-observations.npy', allow_pickle=True)\n",
-        "expert_actions = np.load(root_dir+'/data/expert-actions.npy', allow_pickle=True)\n",
+        "# Make Datasets \n",
         "\n",
         "count_discarded_numpy = 0\n",
         "count_discarded = 0\n",
@@ -163,8 +174,8 @@
         "  if (a > 1e2).any() or (a > 1e2).any():\n",
         "  # if not np.isfinite(a).all(): \n",
         "    list_of_index_to_drop.append(i)\n",
-        "    print(i)\n",
-        "    print(a)\n",
+        "    # print(i)\n",
+        "    # print(a)\n",
         "    count_discarded_numpy+=1\n",
         "    # break\n",
         "\n",
@@ -181,7 +192,7 @@
         "  if (a > 1e2).any() or (a < -1e2).any() :\n",
         "  # if not torch.isfinite(a).any():\n",
         "    count_discarded += 1\n",
-        "    print(a)\n",
+        "    # print(a)\n",
         "\n",
         "print(\"Discarded data:\")\n",
         "print(\"Discarded form np: {}\".format(count_discarded_numpy))\n",
@@ -196,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "id": "56a9ee4c",
       "metadata": {},
       "outputs": [
@@ -221,8 +232,8 @@
         "train_expert_dataset, test_expert_dataset,val_expert_dataset = random_split(expert_dataset, [train_size, test_size,val_size])\n",
         "\n",
         "train_loader = torch.utils.data.DataLoader(dataset=train_expert_dataset, batch_size=batch_size, shuffle=True)\n",
-        "test_loader = torch.utils.data.DataLoader(dataset=test_expert_dataset, batch_size=batch_size, shuffle=True)\n",
-        "val_loader = torch.utils.data.DataLoader( dataset=val_expert_dataset, batch_size=batch_size, shuffle=True)\n",
+        "test_loader = torch.utils.data.DataLoader(dataset=test_expert_dataset, batch_size=batch_size, shuffle=False)\n",
+        "val_loader = torch.utils.data.DataLoader( dataset=val_expert_dataset, batch_size=batch_size, shuffle=False)\n",
         "\n",
         "\n",
         "print(\"Shapes:\")\n",
@@ -240,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "id": "94873ce1",
       "metadata": {},
       "outputs": [
@@ -263,7 +274,7 @@
         "\n",
         "obs_space = train_loader.dataset.__getitem__(0)[0].shape[0]\n",
         "action_space = train_loader.dataset.__getitem__(0)[1].shape[0]\n",
-        "policy = bco.BCOAgentFC(obs_space, action_space, h_size=obs_space*2)\n",
+        "policy = bco.BCOAgentFC(obs_space, action_space, h_size=obs_space*2).to(device)\n",
         "\n",
         "print(\"Policy net: {}\".format(policy))"
       ]
@@ -296,15 +307,11 @@
         "        thrashold\n",
         "    ):\n",
         "\n",
-        "\n",
         "    policy.train()\n",
-        "    policy.to(device)\n",
-        "    \n",
         "    loss = 0\n",
         "    epoch_loss = 0\n",
         "    unused_val = 0\n",
         "\n",
-        "    \n",
         "    with tqdm(total=train_epochs, leave=True) as pbar:\n",
         "        for epoch in range(train_epochs):\n",
         "            for batch_idx, (data, target) in enumerate(train_loader):\n",
@@ -475,9 +482,7 @@
       "outputs": [],
       "source": [
         "def test(policy, test_loader,loss_criterion):\n",
-        "    policy.eval()\n",
-        "    policy.to(device)\n",
-        "    \n",
+        "    policy.eval()   \n",
         "    loss = 0\n",
         "    epoch_loss = 0\n",
         "    \n",
@@ -871,14 +876,10 @@
       ],
       "source": [
         "for i in range(80,110):\n",
-        "  obs, action  = train_loader.dataset.__getitem__(i)\n",
-        "\n",
         "  print(f'real action: {action}')\n",
-        "\n",
+        "  obs, action  = train_loader.dataset.__getitem__(i)\n",
         "  obs = obs.float().unsqueeze(0).to(device)\n",
-        "\n",
         "  our_action = policy(obs).squeeze().detach().cpu().numpy()\n",
-        "\n",
         "  print(f'our action: {our_action}')"
       ]
     },
@@ -934,9 +935,7 @@
         "\n",
         "# save_parameters()\n",
         "version = 5\n",
-        "policy.save_parameters(root_dir+'/checkpoints/', version)\n",
-        "\n",
-        "#qui finisce "
+        "policy.save_parameters(root_dir+'/checkpoints/', version)"
       ]
     },
     {
@@ -978,12 +977,156 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "4f8751c4",
+      "metadata": {},
+      "source": [
+        "## Data "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
-      "id": "3722d4a4",
+      "id": "0c99a49e",
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# Dataset class\n",
+        "\n",
+        "class ExpertDataSetCNN(Dataset):\n",
+        "\n",
+        "    def __init__(self, expert_observations, expert_actions):\n",
+        "        self.observations = torch.from_numpy(expert_observations).float()\n",
+        "        self.actions = self.__preprocess__(torch.from_numpy(expert_actions))\n",
+        "        \n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        # return (self.observations[index], self.actions[index])\n",
+        "        # normalized_observations = 2 * ((self.observations[idx] - self.observations.min()) / (self.observations.max() - self.observations.min())) - 1\n",
+        "        # normalized_actions = 2 * ((self.actions[idx] - self.actions.min()) / (self.actions.max() - self.actions.min())) - 1\n",
+        "        # normalized_data = (normalized_observations, self.actions[idx])\n",
+        "        normalized_data = (self.observations[idx], self.actions[idx])\n",
+        "        return normalized_data\n",
+        "\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.observations)\n",
+        "    \n",
+        "    \n",
+        "    def __preprocess__(self, data, clip_value=1e38):\n",
+        "        # Clip values to a maximum and minimum range\n",
+        "        data = torch.clamp(data, min=-clip_value, max=clip_value)\n",
+        "        \n",
+        "        # Convert to float\n",
+        "        return data.float()\n",
+        "    \n",
+        "    def __min__max__(self):\n",
+        "        return self.observations.min(), self.observations.max() "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "418019d8",
+      "metadata": {},
+      "source": [
+        "## Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b5d59f77",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "###### Define student agent\n",
+        "\n",
+        "\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "from os.path import join, exists\n",
+        "from os import mkdir, remove, rename\n",
+        "# from os import mkdir, unlink, listdir, getpid, remove\n",
+        "\n",
+        "\n",
+        "class BCOAgentCNN(nn.Module):\n",
+        "\n",
+        "  def __init__(self, obs_space, \n",
+        "               action_space,\n",
+        "               h_size=16,\n",
+        "               device='cpu'\n",
+        "              ) -> None:\n",
+        "    \n",
+        "    super(BCOAgentCNN, self).__init__()\n",
+        "\n",
+        "    self.name = 'bco-fc'\n",
+        "    self.device = device\n",
+        "\n",
+        "    self.n_inputs = obs_space\n",
+        "    self.n_outputs = action_space\n",
+        "\n",
+        "    # Policy Network\n",
+        "    self.fc1 = nn.Linear(self.n_inputs, h_size) #16\n",
+        "    self.bn1 = nn.BatchNorm1d(h_size) #16\n",
+        "    self.relu = nn.ReLU()\n",
+        "    self.fc2 = nn.Linear(h_size, self.n_outputs) #16\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    out = self.fc1(x)\n",
+        "    out = self.bn1(out)\n",
+        "    out = self.relu(out)\n",
+        "    out = self.fc2(out)\n",
+        "    return out\n",
+        "  \n",
+        "  def load_parameters(self, src, version):\n",
+        "    src = src+self.name.lower()+'-'+str(version)+'.pt'\n",
+        "    if exists(src):\n",
+        "        print(\"Loading model \"+self.name.lower()+'-'+str(version)+\" state parameters\")\n",
+        "        print(\"From :{}\".format(src))\n",
+        "        self.load_state_dict(torch.load(src, map_location=self.device))\n",
+        "        return self\n",
+        "    else:\n",
+        "        print(\"Error no model \"+self.name.lower()+'-'+str(version)+'.pt'+\" found!\")\n",
+        "        exit(1)\n",
+        "\n",
+        "  \n",
+        "  def save_parameters(self, dest, version):\n",
+        "    save_name = self.name.lower()+'-'+str(version)+'.pt'\n",
+        "\n",
+        "    if not exists(dest): \n",
+        "      mkdir(dest)\n",
+        "    else: \n",
+        "        if exists(dest+save_name):\n",
+        "          rename(dest+save_name, dest+save_name+'.bk')\n",
+        "\n",
+        "    torch.save(self.state_dict(), dest+save_name)\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0742b17d",
+      "metadata": {},
+      "source": [
+        "## Training"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "1dc1a206",
+      "metadata": {},
+      "source": [
+        "## Testing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c5968344",
+      "metadata": {},
+      "source": [
+        "## Saving"
+      ]
     }
   ],
   "metadata": {
